[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/SpriteBuilder/SpriteBuilder_TEST.gd" type="Script" id=1]
[ext_resource path="res://Sprites/TmpSprite.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 37, 63 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="Button" type="Button" parent="."]
margin_left = 36.0
margin_top = 26.0
margin_right = 174.0
margin_bottom = 46.0
text = "Generate"

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 138, 63 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
